[gd_scene load_steps=6 format=3 uid="uid://bapy5h4vk8kkv"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_j3eca"]
[ext_resource type="PackedScene" uid="uid://byohgtx6c0xs5" path="res://Enemybullet.tscn" id="2_hciq7"]
[ext_resource type="PackedScene" uid="uid://b4w03cof6tlsu" path="res://Design/design_enemy_fort.tscn" id="3_bvusx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jafs0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fmm0g"]
radius = 3.0

[node name="Enemy" type="CharacterBody3D" groups=["EnemyGroup"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_j3eca")
m_scn_enemybullet = ExtResource("2_hciq7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_jafs0")

[node name="BulletSensor" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="BulletSensor"]
shape = SubResource("SphereShape3D_fmm0g")

[node name="Timer_fire" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Timer_short" type="Timer" parent="."]
wait_time = 0.5

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.7)

[node name="DesignEnemyFort" parent="." instance=ExtResource("3_bvusx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[connection signal="body_entered" from="BulletSensor" to="." method="_on_bullet_sensor_body_entered"]
[connection signal="timeout" from="Timer_fire" to="." method="_on_timer_fire_timeout"]
[connection signal="timeout" from="Timer_short" to="." method="_on_timer_short_timeout"]
